Complete API and DB basic setup.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.flyway.password=${SUPABASE_DB_PASSWORD}
 
 # Don?t let Spring run SQL init if you rely on Flyway
 spring.sql.init.mode=never
+
+# resolve from env; fail fast if base URL is missing
+coingecko.base-url=${COINGECKO_BASE_URL}
+# api key is optional; allow empty if not set
+coingecko.api-key=${COINGECKO_API_KEY:}
