Complete api - integrate trending search and fallback mechanism.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=backend
 
 # --- R2DBC (app data access) ---
-spring.r2dbc.url=r2dbc:postgresql://${SUPABASE_DB_HOST}:${SUPABASE_DB_PORT}/${SUPABASE_DB_NAME}?sslMode=${SUPABASE_SSLMODE}
+spring.r2dbc.url=r2dbc:postgresql://${SUPABASE_DB_HOST}:${SUPABASE_DB_PORT}/${SUPABASE_DB_NAME}?ssl=true&sslMode=${SUPABASE_SSLMODE}
 spring.r2dbc.username=${SUPABASE_DB_USER}
 spring.r2dbc.password=${SUPABASE_DB_PASSWORD}
 
-# If you added r2dbc-pool:
-# spring.r2dbc.pool.enabled=true
+# Enable R2DBC connection pooling
+spring.r2dbc.pool.enabled=true
 
-# --- Flyway (runs with JDBC) ---
+# --- Flyway (JDBC for migrations) ---
 spring.flyway.url=jdbc:postgresql://${SUPABASE_DB_HOST}:${SUPABASE_DB_PORT}/${SUPABASE_DB_NAME}?sslmode=${SUPABASE_SSLMODE}
 spring.flyway.user=${SUPABASE_DB_USER}
 spring.flyway.password=${SUPABASE_DB_PASSWORD}
@@ -20,3 +20,9 @@ spring.sql.init.mode=never
 coingecko.base-url=${COINGECKO_BASE_URL}
 # api key is optional; allow empty if not set
 coingecko.api-key=${COINGECKO_API_KEY:}
+
+# --- Feed composition knobs ---
+coins.fallback.ids=bitcoin,ethereum,solana,avalanche-2,cardano,dogecoin,polkadot,chainlink,cosmos,litecoin,internet-computer,near,arbitrum,aptos,sui
+coins.fallback.prune-extraneous=true
+coins.feed.target-size=15
+coins.feed.max-fallback-staleness-hours=168
