--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,3 +26,10 @@ coins.fallback.ids=bitcoin,ethereum,solana,avalanche-2,cardano,dogecoin,polkadot
 coins.fallback.prune-extraneous=true
 coins.feed.target-size=15
 coins.feed.max-fallback-staleness-hours=168
+
+# Let Cloud Run inject the port
+server.port=${PORT:8080}
+
+# (Optional) expose actuator health if you want
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
