Refactor database connection for hardening and resilience against 500 sync error from scheduler.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,21 @@
 spring.application.name=backend
 
 # --- R2DBC (app data access) ---
-spring.r2dbc.url=r2dbc:postgresql://${SUPABASE_DB_HOST}:${SUPABASE_DB_PORT}/${SUPABASE_DB_NAME}?ssl=true&sslMode=${SUPABASE_SSLMODE}
+spring.r2dbc.url=r2dbc:postgresql://${SUPABASE_DB_HOST}:${SUPABASE_DB_PORT}/${SUPABASE_DB_NAME}?sslMode=${SUPABASE_SSLMODE}&connectTimeout=PT15S
 spring.r2dbc.username=${SUPABASE_DB_USER}
 spring.r2dbc.password=${SUPABASE_DB_PASSWORD}
 
 # Enable R2DBC connection pooling
 spring.r2dbc.pool.enabled=true
+
+# R2DBC pool hardening
+spring.r2dbc.pool.initial-size=0
+spring.r2dbc.pool.max-size=20
+spring.r2dbc.pool.max-idle-time=30s
+spring.r2dbc.pool.max-acquire-time=30s
+spring.r2dbc.pool.max-create-connection-time=30s
+spring.r2dbc.pool.validation-depth=REMOTE
+spring.r2dbc.pool.validation-query=SELECT 1
 
 # --- Flyway (JDBC for migrations) ---
 spring.flyway.url=jdbc:postgresql://${SUPABASE_DB_HOST}:${SUPABASE_DB_PORT}/${SUPABASE_DB_NAME}?sslmode=${SUPABASE_SSLMODE}
