Refactor database access url.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
 
 # --- R2DBC (app data access) ---
-spring.r2dbc.url=r2dbc:postgresql://${SUPABASE_DB_HOST}:${SUPABASE_DB_PORT}/${SUPABASE_DB_NAME}?sslMode=${SUPABASE_SSLMODE}&connectTimeout=PT15S
+spring.r2dbc.url=r2dbc:postgresql://${SUPABASE_DB_HOST}:${SUPABASE_DB_PORT}/${SUPABASE_DB_NAME}?ssl=true&sslMode=${SUPABASE_SSLMODE}&connectTimeout=PT15S
 spring.r2dbc.username=${SUPABASE_DB_USER}
 spring.r2dbc.password=${SUPABASE_DB_PASSWORD}
 
